# website-summarizer6a4c5341-3afb-48ca-8392-b72d45bee6d7

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: check_parsing_status_service.py  create_session_service.py  initiate_parsing_service.py  retrieve_results_interface_service.py  retrieve_summary_service.py  send_for_summarization_service.py  server.py  start_parsing_interface_service.py  terminate_session_service.py  update_parsing_strategy_service.py  verify_compliance_service.py
